# unravel-vst

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_MaskEstimator.md  README.md  REVIEW-AUDIO.md  REVIEW-DESIGN.md  REVIEW-USER.md  TODO.md  Unravel.jucer  test_unity_gain.cpp
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml
Documentation/: Cleanup_Report.md  HPSSProcessor_Documentation.md  MagPhaseFrame_Usage.md  MaskEstimator_Documentation.md  STFTProcessor_Documentation.md  ui_standards.md  uiux_audit.md
Harness/: CMakeLists.txt  last_run.txt  main.cpp
Scripts/: build.sh  clear_soundminer_cache.sh  demo.sh  install.sh  sign_and_notarize.sh  test.sh
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: HPSSProcessor.cpp  HPSSProcessor.h  HarmonicMaskDetector.cpp  HarmonicMaskDetector.h  JuceIncludes.h  LowFreqPartialTracker.cpp  LowFreqPartialTracker.h  MagPhaseFrame.cpp  MagPhaseFrame.h  MaskEstimator.cpp  MaskEstimator.h  MaskReconciler.cpp  MaskReconciler.h  STFTProcessor.cpp  STFTProcessor.h
Source/DSP/_legacy/: AdvancedMaskEstimator.cpp  AdvancedMaskEstimator.h  FFTProcessor.cpp  FFTProcessor.h  HPSSProcessorExample.cpp  HarmonicAnalyzer.cpp  HarmonicAnalyzer.h  MaskEstimatorExample.cpp  STFTProcessorExample.cpp  STFTProcessorExample.h  SinusoidalModelProcessor.cpp  SinusoidalModelProcessor.h  SpectralPeakTracker.cpp  SpectralPeakTracker.h  SpectralProcessor.cpp  SpectralProcessor.h  TonalNoiseDecomposer.cpp  TonalNoiseDecomposer.h
Source/GUI/: CustomLookAndFeel.cpp  CustomLookAndFeel.h  SpectrumDisplay.cpp  SpectrumDisplay.h  Theme.h  VerticalSlider.cpp  VerticalSlider.h  XYPad.cpp  XYPad.h
Source/Parameters/: ParameterDefinitions.h
Tests/: test_advanced_separation.cpp  test_debug_passthrough.cpp  test_hpss_processor.cpp  test_magphase_frame.cpp  test_main.cpp  test_mask_estimator.cpp  test_stft_detailed.cpp  test_stft_processor.cpp
docs/: JUCE_VST3_BEST_PRACTICES.md  JUCE_VST3_UI_UX_BEST_PRACTICES.md  USER_GUIDE.md
docs/host-compatibility/: soundminer_vst3_troubleshooting.md
docs/superpowers/plans/: 2026-06-01-multiresolution-hpss-isolation.md  2026-06-01-tonal-skirt-dilation.md
docs/superpowers/specs/: 2026-06-01-multiresolution-hpss-isolation-design.md
